--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=LibraryDb;Uid=root;Pwd=root;Integrated Security=True;MultipleActiveResultSets=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
